skills and personal info row added

--- a/index.html
+++ b/index.html
@@ -98,8 +98,81 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="personal-info padd-15">Info</div>
-                  <div class="skills padd-15">Skills</div>
+                  <div class="personal-info padd-15">
+                    <div class="row">
+                      <div class="info-item padd-15">
+                        <p>Birthday : <span>20 Apr 2002</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Age : <span>20</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Website : <span>davidmesiya007.github.io</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Email : <span>mddavid11204@gmail.com</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Degree : <span>IT</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>phone <span>+91 6381962502</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>City : <span>Sayalkudi</span></p>
+                      </div>
+                      <div class="info-item padd-15">
+                        <p>Freelancing : <span>Available</span></p>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="buttons padd-15">
+                        <a href="#" class="btn">Download Resume</a>
+                        <a class="btn hire-me" href="#">Hire Me</a>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="skills padd-15">
+                    <div class="row">
+                      <div class="skill-item">
+                        <h5>HTML</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 85%"></div>
+                          <div class="skill-percent">85%</div>
+                        </div>
+                      </div>
+                      <div class="skill-item">
+                        <h5>CSS</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 75%"></div>
+                          <div class="skill-percent">75%</div>
+                        </div>
+                      </div>
+                      <div class="skill-item">
+                        <h5>JavaScript</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 50%"></div>
+                          <div class="skill-percent">50%</div>
+                        </div>
+                      </div>
+                      <div class="skill-item">
+                        <h5>C</h5>
+                        <div class="progress">
+                          <div class="progress-in" style="width: 70%"></div>
+                          <div class="skill-percent">70%</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="education padd-15">
+                    <h3 class="title">Education</h3>
+                  </div>
+                  <div class="experience padd-15">
+                    <h3 class="title">Experience</h3>
+                  </div>
                 </div>
               </div>
             </div>
