About us Section was created

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="#"><i class="fa fa-user"></i>About</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-list"></i>Serivices</a>
+            <a href="#"><i class="fa fa-list"></i>Services</a>
           </li>
           <li>
             <a href="#"><i class="fa fa-briefcase"></i>Portfolio</a>
@@ -40,12 +40,12 @@
           </li>
         </ul>
       </div>
-      <!-- Aside Section End -->
+      <!-- ===== Aside Section End ===== -->
 
-      <!-- Main Section - Start -->
+      <!-- ====== Main Section ====== - Start -->
       <div class="section-main">
-        <!-- Home section start -->
-        <div class="home section-home hidden">
+        <!-- ====== Home section start ====== -->
+        <section class="home section-home hidden">
           <div class="container">
             <div class="row">
               <div class="home-info padd-15">
@@ -68,11 +68,11 @@
               </div>
             </div>
           </div>
-        </div>
-        <!-- home section end -->
+        </section>
+        <!-- ===== home section end ===== -->
 
-        <!-- About me section start -->
-        <section class="about section-home">
+        <!-- ===== About me section start ===== -->
+        <section class="about section-home hidden">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -84,7 +84,7 @@
                 <div class="row">
                   <div class="about-text padd-15">
                     <h3>
-                      I'm David M the <span>programer</span> and
+                      I'm David M and
                       <span>web Developer</span>
                     </h3>
                     <p>
@@ -93,7 +93,9 @@
                       I decided to study the field that I'm interested in. I
                       actually like Biology too, but not more than computers I
                       am currently studying B.Tech: Information Technology in
-                      University College of Engineering,Villupuram (UCEV).
+                      University College of Engineering,Villupuram (UCEV). I'm
+                      interested in Front End Development. So I am currently
+                      focused on HTML, CSS, JavaScript.
                     </p>
                   </div>
                 </div>
@@ -157,7 +159,7 @@
                         </div>
                       </div>
                       <div class="skill-item">
-                        <h5>C</h5>
+                        <h5>Standard C</h5>
                         <div class="progress">
                           <div class="progress-in" style="width: 70%"></div>
                           <div class="skill-percent">70%</div>
@@ -169,12 +171,206 @@
                 <div class="row">
                   <div class="education padd-15">
                     <h3 class="title">Education</h3>
+                    <div class="row">
+                      <div class="timeline-box padd-15">
+                        <div class="timeline shadow-dark">
+                          <!--     Time line items-->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i> 2019 - 2023
+                            </h3>
+                            <h4 class="timeline-title">
+                              Engineering in Information Technology
+                            </h4>
+                            <p class="timeline-text">
+                              I am currently studying University College of
+                              Engineering, Villupuram (UCEV). My CGPA upto 6th
+                              semester is 8.04%. I'm a Team captain of chess in
+                              our college
+                            </p>
+                          </div>
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i> 2019 - 2023
+                            </h3>
+                            <h4 class="timeline-title">
+                              Higher Secondery Course (HSC)
+                            </h4>
+                            <p class="timeline-text">
+                              I'm completed my 12th grade (71.8%) Goverment Boys
+                              Higher Secondery School in Sayalkudi. I'm
+                              Participated in the POSTER PRESENTATION event as
+                              part of India International Science Festivel -
+                              2017 held at Chennai
+                            </p>
+                          </div>
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i> 2018 - 2019
+                            </h3>
+                            <h4 class="timeline-title">
+                              Secondery School Leaving Certificate (SSLC)
+                            </h4>
+                            <p class="timeline-text">
+                              I'm completed my 10th grade in Goverment Boys
+                              Higher Secondery School, Sayalkudi. My overall
+                              mark percentage is 91.8%. I'm a zonal level
+                              champion in chess.
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
-                  <div class="experience padd-15">
-                    <h3 class="title">Experience</h3>
+                  <div class="project padd-15">
+                    <h3 class="title">Projects</h3>
+                    <div class="row">
+                      <div class="timeline-box padd-15">
+                        <div class="timeline shadow-dark">
+                          <!--     Time line items-->
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i> 2022 - till now
+                            </h3>
+                            <h4 class="timeline-title">
+                              Prediction of Heart Diseases (IBM)
+                            </h4>
+                            <p class="timeline-text">
+                              The purpose of this project is aimed at developing
+                              a Interactive Dashboard used for doctors that
+                              predicting heart disease by given input data.
+                            </p>
+                            <!-- <p class="timeline-text">GPA : 8.04%</p> -->
+                          </div>
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i> Feb 2022 - Apr 2022
+                            </h3>
+                            <h4 class="timeline-title">
+                              Recruitment Management System (Mini project)
+                            </h4>
+                            <p class="timeline-text">
+                              The purpose of this project aimed at developing a
+                              recruitment management system called Job-seek that
+                              manages the recruitment processes of oraganization
+                              and redces the cost used in the recruitment of
+                              staffs.
+                            </p>
+                          </div>
+                          <div class="timeline-item">
+                            <div class="circle-dot"></div>
+                            <h3 class="timeline-date">
+                              <i class="fa fa-calendar"></i> 2018 - 2019
+                            </h3>
+                            <h4 class="timeline-title">Omni-food Project</h4>
+                            <p class="timeline-text">
+                              A major focus of this project is consumer well
+                              being through a healthy diet. The development
+                              process only using HTML,CSS and JavaScipt
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+        </section>
+        <!-- ===== About Section End ===== -->
+        <!-- ===== Service Section Start ===== -->
+        <section class="service section-home">
+          <div class="container">
+            <div class="row">
+              <div class="section-title padd-15">
+                <h2>Services</h2>
+              </div>
+            </div>
+            <div class="row">
+              <!-- ====== Service item Start ====== -->
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
+                  <div class="icon">
+                    <i class="fa fa-mobile-alt"></i>
+                  </div>
+                  <h4>Web Design</h4>
+                  <p>
+                    I'm created personality based web Design using photoshop
+                  </p>
+                </div>
+              </div>
+              <!-- ====== service item end ====== -->
+              <!-- ====== Service item Start ====== -->
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
+                  <div class="icon">
+                    <i class="fa fa-laptop-code"></i>
+                  </div>
+                  <h4>Web Design</h4>
+                  <p>
+                    I'm created personality based web Design using photoshop
+                  </p>
+                </div>
+              </div>
+              <!-- ====== service item end ====== -->
+              <!-- ====== Service item Start ====== -->
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
+                  <div class="icon">
+                    <i class="fa fa-palette"></i>
+                  </div>
+                  <h4>Web Design</h4>
+                  <p>
+                    I'm created personality based web Design using photoshop
+                  </p>
+                </div>
+              </div>
+              <!-- ====== service item end ====== -->
+              <!-- ====== Service item Start ====== -->
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
+                  <div class="icon">
+                    <i class="fa fa-code"></i>
+                  </div>
+                  <h4>Web Design</h4>
+                  <p>
+                    I'm created personality based web Design using photoshop
+                  </p>
+                </div>
+              </div>
+              <!-- ====== service item end ====== -->
+              <!-- ====== Service item Start ====== -->
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
+                  <div class="icon">
+                    <i class="fa fa-search"></i>
+                  </div>
+                  <h4>Web Design</h4>
+                  <p>
+                    I'm created personality based web Design using photoshop
+                  </p>
+                </div>
+              </div>
+              <!-- ====== service item end ====== -->
+              <!-- ====== Service item Start ====== -->
+              <div class="service-item padd-15">
+                <div class="service-item-inner">
+                  <div class="icon">
+                    <i class="fa fa-bullhorn"></i>
+                  </div>
+                  <h4>Web Design</h4>
+                  <p>
+                    I'm created personality based web Design using photoshop
+                  </p>
+                </div>
+              </div>
+              <!-- ====== service item end ====== -->
             </div>
           </div>
         </section>
