--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <!-- ====== Main Section ====== - Start -->
       <div class="section-main">
         <!-- ====== Home section start ====== -->
-        <section class="home section-home hidden">
+        <section class="home section-home">
           <div class="container">
             <div class="row">
               <div class="home-info padd-15">
@@ -72,7 +72,7 @@
         <!-- ===== home section end ===== -->
 
         <!-- ===== About me section start ===== -->
-        <section class="about section-home hidden">
+        <section class="about section-home">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -374,6 +374,128 @@
             </div>
           </div>
         </section>
+        <!-- ====== service Section End ====== -->
+        <!-- ====== Portfolio Section Start ====== -->
+        <section class="portfolio section-home">
+          <div class="container">
+            <div class="row">
+              <div class="section-title padd-15">
+                <h2>Portfolio</h2>
+              </div>
+            </div>
+            <div class="row">
+              <div class="portfolio-heading padd-15">
+                <h2>My Last Projects :</h2>
+              </div>
+            </div>
+            <div class="row">
+              <!-- ====== Portfolio item Start ====== -->
+              <div class="portfolio-item padd-15">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img
+                      src="/images/portfolio/omnifood.png"
+                      width="550px"
+                      alt="Omnifood Project"
+                      height="240px"
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <!-- ====== Portfolio item End ====== -->
+              <!-- ====== Portfolio item Start ====== -->
+              <div class="portfolio-item padd-15">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img
+                      src="/images/portfolio/new-year.png"
+                      width="500px"
+                      height="240px"
+                      alt="Omnifood Project"
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <!-- ====== Portfolio item End ====== -->
+              <!-- ====== Portfolio item Start ====== -->
+              <div class="portfolio-item padd-15">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img
+                      src="/images/portfolio/timer.png"
+                      width="500px"
+                      height="240px"
+                      alt="Omnifood Project"
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <!-- ====== Portfolio item End ====== -->
+              <!-- ====== Portfolio item Start ====== -->
+              <div class="portfolio-item padd-15">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img
+                      src="/images/portfolio/guess-game.png"
+                      width="500px"
+                      height="240px"
+                      alt="Omnifood Project"
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <!-- ====== Portfolio item End ====== -->
+              <!-- ====== Portfolio item Start ====== -->
+              <div class="portfolio-item padd-15">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img
+                      src="/images/portfolio/tesla.png"
+                      width="500px"
+                      height="240px"
+                      alt="Omnifood Project"
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <!-- ====== Portfolio item End ====== -->
+              <!-- ====== Portfolio item Start ====== -->
+              <div class="portfolio-item padd-15">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img
+                      src="/images/portfolio/contact.png"
+                      width="500px"
+                      height="240px"
+                      alt="Omnifood Project"
+                    />
+                  </div>
+                </div>
+              </div>
+              <!-- ====== Portfolio item End ====== -->
+            </div>
+          </div>
+        </section>
+        <!-- ====== Portfolio Section End ====== -->
+
+        <!-- ====== Contact Section Start ====== -->
+        <section class="contact section-home">
+          <div class="container">
+            <div class="row">
+              <div class="section-title padd-15">
+                <h2>Contact Me</h2>
+              </div>
+            </div>
+            <h3 class="contact-title">Have you any questions ?</h3>
+            <h4 class="contact-sub-title">I'M AT YOUR SERVICE</h4>
+          </div>
+        </section>
+        <!-- ====== Contact Sectiio End ====== -->
       </div>
       <!--   -->
     </div>
