--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                   <div class="portfolio-img">
                     <img
                       src="/images/portfolio/omnifood.png"
-                      width="550px"
+                      width="500px"
                       alt="Omnifood Project"
                       height="240px"
                     />
@@ -491,8 +491,102 @@
                 <h2>Contact Me</h2>
               </div>
             </div>
-            <h3 class="contact-title">Have you any questions ?</h3>
-            <h4 class="contact-sub-title">I'M AT YOUR SERVICE</h4>
+            <h3 class="contact-title padd-15">Have you any questions ?</h3>
+            <h4 class="contact-sub-title padd-15">I'M AT YOUR SERVICES</h4>
+            <div class="row">
+              <!-- ====== Contact Infor item Start ====== -->
+              <div class="contact-info-item padd-15">
+                <div class="icon">
+                  <i class="fa fa-phone"></i>
+                </div>
+                <h4>Call Us On</h4>
+                <p>+91 6381962502</p>
+              </div>
+              <!-- ====== Contact Info Item End ====== -->
+              <!-- ====== Contact Infor item Start ====== -->
+              <div class="contact-info-item padd-15">
+                <div class="icon">
+                  <i class="fa fa-map-marker-alt"></i>
+                </div>
+                <h4>Home</h4>
+                <p>Ramanathapuram</p>
+              </div>
+              <!-- ====== Contact Info Item End ====== -->
+              <!-- ====== Contact Infor item Start ====== -->
+              <div class="contact-info-item padd-15">
+                <div class="icon">
+                  <i class="fa fa-envelope"></i>
+                </div>
+                <h4>Email</h4>
+                <p>mddavid11204@gmail.com</p>
+              </div>
+              <!-- ====== Contact Info Item End ====== -->
+              <!-- ====== Contact Infor item Start ====== -->
+              <div class="contact-info-item padd-15">
+                <div class="icon">
+                  <i class="fa fa-globe-europe"></i>
+                </div>
+                <h4>Website</h4>
+                <p>www.davidmesiya.github.io</p>
+              </div>
+              <!-- ====== Contact Info Item End ====== -->
+            </div>
+            <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
+            <h4 class="contact-sub-title padd-15">
+              I'M VERY RESPONSIVE TO MESSAGES
+            </h4>
+            <!-- ====== contact form ====== -->
+            <div class="row">
+              <div class="contact-form padd-15">
+                <div class="row">
+                  <div class="form-item col-6 padd-15">
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Name"
+                      />
+                    </div>
+                  </div>
+                  <div class="form-item col-6 padd-15">
+                    <div class="form-group">
+                      <input
+                        type="email"
+                        class="form-control"
+                        placeholder="Email"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="form-item col-12 padd-15">
+                    <div class="form-group">
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Subject"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="form-item col-12 padd-15">
+                    <div class="form-group">
+                      <textarea
+                        type="text"
+                        class="form-control"
+                        placeholder="Message"
+                      ></textarea>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="form-item col-12 padd-15">
+                    <button type="submit" class="btn">Send Message</button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
         <!-- ====== Contact Sectiio End ====== -->
