mobile nav and theme color developed

--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
         </div>
         <ul class="aside-nav">
           <li>
-            <a class="active" href="#"><i class="fa fa-home"></i>Home</a>
+            <a class="active" href="#home"><i class="fa fa-home"></i>Home</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-user"></i>About</a>
+            <a href="#about"><i class="fa fa-user"></i>About</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-list"></i>Services</a>
+            <a href="#service"><i class="fa fa-list"></i>Services</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-briefcase"></i>Portfolio</a>
+            <a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-comments"></i>Contact</a>
+            <a href="#contact"><i class="fa fa-comments"></i>Contact</a>
           </li>
         </ul>
       </div>
@@ -83,7 +83,7 @@
       <!-- ====== Main Section ====== - Start -->
       <div class="section-main">
         <!-- ====== Home section start ====== -->
-        <section class="home section-home">
+        <section class="home active section-home" id="home">
           <div class="container">
             <div class="row">
               <div class="home-info padd-15">
@@ -110,7 +110,7 @@
         <!-- ===== home section end ===== -->
 
         <!-- ===== About me section start ===== -->
-        <section class="about section-home">
+        <section class="about section-home" id="about">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -147,10 +147,10 @@
                         <p>Age : <span>20</span></p>
                       </div>
                       <div class="info-item padd-15">
-                        <p>Website : <span>davidmesiya007.github.io</span></p>
+                        <p>Website : <span>davidmesiya</span></p>
                       </div>
                       <div class="info-item padd-15">
-                        <p>Email : <span>mddavid11204@gmail.com</span></p>
+                        <p>Email : <span>mddavid11204</span></p>
                       </div>
                       <div class="info-item padd-15">
                         <p>Degree : <span>IT</span></p>
@@ -323,7 +323,7 @@
         </section>
         <!-- ===== About Section End ===== -->
         <!-- ===== Service Section Start ===== -->
-        <section class="service section-home">
+        <section class="service section-home" id="service">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -414,7 +414,7 @@
         </section>
         <!-- ====== service Section End ====== -->
         <!-- ====== Portfolio Section Start ====== -->
-        <section class="portfolio section-home">
+        <section class="portfolio section-home" id="portfolio">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -522,7 +522,7 @@
         <!-- ====== Portfolio Section End ====== -->
 
         <!-- ====== Contact Section Start ====== -->
-        <section class="contact section-home">
+        <section class="contact section-home" id="contact">
           <div class="container">
             <div class="row">
               <div class="section-title padd-15">
@@ -640,7 +640,7 @@
         <i class="fas fa-cog fa-spin"></i>
       </div>
       <div class="day-night s-icon">
-        <i class="fas fa-moon"></i>
+        <i class="fas"></i>
       </div>
       <h4>Theme colors</h4>
       <div class="colors">
@@ -653,6 +653,12 @@
     </div>
 
     <!-- Js Files -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"
+      integrity="sha512-3J8teBiHrSyaaRBajZyIEtpDsXdPq1gsznKWIVb5CnorQuFhjWGhWe54z8YNnHHr7MZuExb9m5kvf964HiT1Sw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="js/script.js"></script>
     <script src="js/style-switcher.js"></script>
   </body>
