--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                   experience developing consumer-focused websites using HTML,
                   CSS, JavaScript and many more...
                 </p>
-                <a class="btn hire-me" href="#">Hire Me</a>
+                <a class="btn" href="#">Download CV</a>
               </div>
               <div class="home-img padd-15">
                 <img src="images/photograph.jpg" alt="david photograph" />
@@ -167,8 +167,8 @@
                     </div>
                     <div class="row">
                       <div class="buttons padd-15">
-                        <a href="#" class="btn">Download Resume</a>
-                        <a class="btn hire-me" href="#">Hire Me</a>
+                        <!-- <a href="#" class="btn">Download Resume</a> -->
+                        <a class="btn hire-me" data-section-index="1" href="#contact">Hire Me</a>
                       </div>
                     </div>
                   </div>
