minor changes in services section

--- a/index.html
+++ b/index.html
@@ -168,7 +168,12 @@
                     <div class="row">
                       <div class="buttons padd-15">
                         <!-- <a href="#" class="btn">Download Resume</a> -->
-                        <a class="btn hire-me" data-section-index="1" href="#contact">Hire Me</a>
+                        <a
+                          class="btn hire-me"
+                          data-section-index="1"
+                          href="#contact"
+                          >Hire Me</a
+                        >
                       </div>
                     </div>
                   </div>
@@ -338,9 +343,7 @@
                     <i class="fa fa-mobile-alt"></i>
                   </div>
                   <h4>Web Design</h4>
-                  <p>
-                    I'm created personality based web Design using photoshop
-                  </p>
+                  <p>Designing a user attractive web pages using photoshop</p>
                 </div>
               </div>
               <!-- ====== service item end ====== -->
@@ -350,9 +353,9 @@
                   <div class="icon">
                     <i class="fa fa-laptop-code"></i>
                   </div>
-                  <h4>Web Design</h4>
+                  <h4>Web Developement</h4>
                   <p>
-                    I'm created personality based web Design using photoshop
+                    I'm build a responsive layout using HTML, CSS, Javascript
                   </p>
                 </div>
               </div>
@@ -363,10 +366,8 @@
                   <div class="icon">
                     <i class="fa fa-palette"></i>
                   </div>
-                  <h4>Web Design</h4>
-                  <p>
-                    I'm created personality based web Design using photoshop
-                  </p>
+                  <h4>Graphic Design</h4>
+                  <p>I communicate an idea using colors, image and graphs</p>
                 </div>
               </div>
               <!-- ====== service item end ====== -->
@@ -376,9 +377,10 @@
                   <div class="icon">
                     <i class="fa fa-code"></i>
                   </div>
-                  <h4>Web Design</h4>
+                  <h4>Problem Solving</h4>
                   <p>
-                    I'm created personality based web Design using photoshop
+                    Dont't worry I have the best solution for to solve your
+                    problem
                   </p>
                 </div>
               </div>
